# pico-microphone

./: CMakeLists.txt  README.md
examples/udp_microphone/: CMakeLists.txt  main.c
